# HumanPoseMatching

./: .gitignore  CMakeLists.txt  README.md
data/HRPGroup3/: VariantInfo-HRPGroup3.xml
data/MMM/: banana.blend  banana1.xml  banana2.xml  floor.xml  mmm.urdf  mmm.xml  root_banana_1_joint_visu.wrl  root_banana_2_joint_visu.wrl
data/MMM/models/: root_floor_joint_visu.wrl
etc/cmake/: UseHRPGroup3.cmake
etc/doxygen/: mainpage.dox
etc/doxygen/pages/: Components.dox  FAQ.dox  GuiPlugins.dox  HowTos.dox  Overview.dox  Tutorials.dox
scenarios/DBFileReadExample/: DBFileReadExample.scx
scenarios/DBFileReadExample/config/: ArVizStorage.cfg  global.cfg
scenarios/Group3Stuff/: Group3Stuff.scx
scenarios/Group3Stuff/config/: GuiVizExampleApp.cfg  global.cfg
scenarios/HumanPoseMatching/: HumanPoseMatching.scx
scenarios/HumanPoseMatching/config/: HumanPoseMatchingApp.cfg  RemoteGuiProviderApp.cfg  global.cfg
source/: CMakeLists.txt
source/HRPGroup3/: CMakeLists.txt
source/HRPGroup3/applications/: CMakeLists.txt
source/HRPGroup3/applications/HumanPoseMatching/: CMakeLists.txt  main.cpp
source/HRPGroup3/components/: CMakeLists.txt
source/HRPGroup3/components/HumanPoseMatching/: CMakeLists.txt  HumanPoseMatching.cpp  HumanPoseMatching.h
source/HRPGroup3/components/HumanPoseMatching/test/: CMakeLists.txt  HumanPoseMatchingTest.cpp
source/HRPGroup3/interface/: CMakeLists.txt
